# PicoAiProController

./: CMakeLists.txt  main.c  model_data.h  readme.md  tflm_micro_interpreter.c  tflm_micro_interpreter.h  tflm_ops.c  usb_descriptors.c
.github/workflows/: main.yml
